<resources>
    <string name="app_name">DonorBlood</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--Preference-->
    <string name="pref_is_firstrun">is_firstrun</string>
    <!--Font Resources-->
    <string name="font_regular">fonts/OpenSansRegular.ttf</string>
    <string name="font_gothic_bold">fonts/GothicBold.ttf</string>
    <!--Home Fragment-->
    <string name="text_zero_donor_ready">No Donor is ready.</string>
    <string name="text_one_donor_ready">Donor is ready</string>
    <string name="text_multi_donor_ready">Donors are ready</string>
    <!--Donor List Fragment-->
    <string name="text_donor_with_group">Donors with Blood Group </string>
    <!--Symbols-->
    <string name="sym_plus">+</string>

    <!--Debug-->
    <string name="debug_null">Null Pointer Exception</string>
    <string name="debug_parse">Parse Exception</string>

    <!--Social Data-->
    <string name="social_facebook">https://www.facebook.com/amalgta</string>
    <string name="social_youtube">http://youtube.com/amalgta</string>
    <string name="social_github">http://github.com/amalgta</string>
    <string name="social_twitter">http://twitter.com/amalgta</string>


    <!--About Screen-->
    <string name="copyright">Copyright</string>
    <string name="copyright_summary" translatable="false">2016, Amal Thomas</string>
    <string name="beta_program_summary">Become a beta tester</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="follow_me_on_twitter">Follow me on Twitter</string>
    <string name="follow_me_on_youtube">Follow my channel on YouTube</string>
    <string name="follow_me_on_github">Follow my channel on GitHub</string>
    <string name="follow_me_on_facebook">Follow me on Facebook</string>
    <string name="settings">Settings</string>
    <string name="five_stars">5 stars</string>
    <string name="about">About</string>
    <string name="like_page">Like Page</string>
    <string name="version">Version</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="facebook">Facebook</string>
    <string name="official_website">Official website</string>
    <string name="youtube">YouTube</string>
    <string name="github">GitHub</string>
    <string name="feedback">Feedback</string>
    <string name="social">Social</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="preferences">Preferences</string>
    <string name="changelog">Changelog</string>
    <string name="google_community">Google+ community</string>
    <string name="beta_program">Beta program</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="developed_by">Developed by</string>
    <string name="follow_us">Follow us</string>
    <string name="legal">Legal</string>
    <string name="support">Support</string>
    <string name="twitter">Twitter</string>
    <string name="date_of_birth">Date of Birth</string>
</resources>
